--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "dauberside.github.io",
   "version": "1.0.0",
-  "description": "Dauberside Project",
+  "description": "Dauberside project",
   "main": "index.js",
   "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dauberside/dauberside.github.io.git"
   },
   "keywords": [
     "Dauberside",
-    "Project"
+    "project"
   ],
-  "author": "KrinkCrank",
+  "author": "Krinkcrank",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dauberside/dauberside.github.io/issues"
-  },
-  "homepage": "https://github.com/dauberside/dauberside.github.io#readme"
+  "dependencies": {
+    "next": "^12.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  }
 }
