--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
   "name": "dauberside.github.io",
-  "version": "1.0.0",
-  "description": "Dauberside project",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "start:webhook": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "next lint"
   },
-  "keywords": [
-    "Dauberside",
-    "project"
-  ],
-  "author": "Krinkcrank",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.17.1",
-    "next": "^12.3.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "openai": "^3.1.0" 
+    "bootstrap": "^5.3.3",
+    "jquery": "^3.7.1",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
