--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "dauberside.github.io",
   "version": "1.0.0",
   "description": "Project description",
-  "main": "index.js",
+  "main": "index.mjs",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "build": "node build.js"
