--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dauberside.github.io",
   "version": "1.0.0",
   "description": "Project description",
-  "main": "index.mjs",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js",
