--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "dauberside.github.io",
   "version": "1.0.0",
   "description": "Project description",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.mjs",
   "scripts": {
-    "start": "node index.js",
-    "build": "node build.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
