--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.3.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "spotify-connect-ws": "^0.1.1",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
