--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "next": "^14.2.3",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "spotify-connect-ws": "^0.1.1",
+    "tailwindcss": "^3.4.4",
     "ws": "^8.17.0"
   },
   "devDependencies": {
