--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "express": "^4.19.2",
     "next": "^14.2.3",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
+    "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "spotify-connect-ws": "^0.1.1",
