--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Project description",
   "main": "index.mjs",
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.19.2",
     "next": "^14.2.3",
+    "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
     "querystring": "^0.2.1",
@@ -32,5 +33,6 @@
     "nodemon": "^3.1.3"
   },
   "author": "dauber side project",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": []
 }
