--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,4 +1,5 @@
 {
+  "version": 2,
   "projectId": "prj_SvykC7R30HlS827AeUOsKPqAvvDZ",
   "orgId": "team_sixQFOWnnLzR59bcCHudMA0n",
   "settings": {
@@ -11,5 +12,11 @@
     "rootDirectory": null,
     "directoryListing": false,
     "nodeVersion": "20.x"
+  },
+  "functions": {
+    "api/send.js": {
+      "memory": 128,
+      "maxDuration": 10
+    }
   }
 }
