--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,11 @@
 {
   "version": 2,
-  "builds": [
-    { "src": "pages/**/*.js", "use": "@vercel/node" },
-    { "src": "api/send.js", "use": "@vercel/node" }
-  ],
+  "buildCommand": "npm run build",
+  "framework": "nextjs",
   "functions": {
     "api/send.js": {
       "memory": 128,
       "maxDuration": 10
     }
-  },
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/pages/$1" }
-  ]
+  }
 }
