--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -11,5 +11,11 @@
     "rootDirectory": null,
     "directoryListing": false,
     "nodeVersion": "20.x"
+  },
+  "functions": {
+    "pages/api/send.js": {
+      "memory": 128,
+      "maxDuration": 10
+    }
   }
 }
