--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server.js",
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
@@ -25,9 +26,9 @@
     "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "spotify-connect-ws": "^0.1.1",
     "tailwindcss": "^3.4.4",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "jest": "^29.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
