--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,6 +1,15 @@
+name: Cleanup Workflow
+
+on:
+  push:
+    branches:
+      - main
+      - master
+
 jobs:
   build:
     runs-on: ubuntu-latest
-steps:
-  - name: Checkout repository
-    uses: actions/checkout@v2
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
