--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.19.2",
+    "jest": "^29.0.0",
     "next": "^14.2.3",
     "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
@@ -26,9 +27,10 @@
     "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.4",
-    "ws": "^8.17.0",
-    "jest": "^29.0.0"
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
