--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,12 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v3  # Node.js 20対応のバージョンに更新
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3  # Node.js 20対応のバージョンに更新
+      with:
+        node-version: '20'
 
     - name: Install dependencies
       run: npm install
@@ -20,12 +25,8 @@ jobs:
       run: npm run build
 
     - name: Deploy to Vercel
-      uses: amondnet/vercel-action@v21
-      with:
-        vercel-token: ${{ secrets.VERCEL_TOKEN }}
-        vercel-args: '--prod'
-        working-directory: ./
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+      run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} --org-id ${{ secrets.VERCEL_ORG_ID }} --project-id ${{ secrets.VERCEL_PROJECT_ID }}
       env:
+        VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
