--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "socket.io": "^4.6.0",      // 追加
-    "socket.io-client": "^4.6.0", // 追加
+    "socket.io": "^4.6.0",
+    "socket.io-client": "^4.6.0",
     "tailwindcss": "^3.4.4",
     "ws": "^8.17.0"
   },
