Update deploy workflow

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "buildCommand": "npm run build",
   "framework": "nextjs",
   "functions": {
-    "pages/api/send.js": {
+    "api/send.js": {
       "memory": 128,
       "maxDuration": 10
     }
