--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "version": 3,
+  "version": 2,
   "buildCommand": "npm run build",
   "framework": "nextjs",
   "functions": {
-    "api/send.js": {
+    "pages/api/send.js": {
       "memory": 128,
       "maxDuration": 10
     }
