--- a/package.json
+++ b/package.json
@@ -28,12 +28,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.4",
-    "socket.io": "^4.6.0",
-    "socket.io-client": "^4.6.0",
     "ws": "^8.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "jest": "^29.0.0"
   },
   "author": "dauber side project",
   "license": "MIT",
