--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.4",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "socket.io-client": "^4.6.0",
+    "socket.io": "^4.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.3",
