Update deploy workflow

--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_USER=daubersideinfo@gmail.com
 SMTP_PASS=ekuc mhig zjpz egvo
+
+VERCEL_TOKEN=dKWP8n2mTlBP12hc8QadVW99
+VERCEL_PROJECT_ID=prj_SvykC7R30HlS827AeUOsKPqAvvDZ
+VERCEL_ORG_ID=team_sixQFOWnnLzR59bcCHudMA0n
