--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "querystring": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.4",
-    "ws": "^8.17.0",
-    "socket.io-client": "^4.6.0",
-    "socket.io": "^4.6.0"
+    "ws": "^8.17.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "nodemon": "^3.1.3"
   },
   "author": "dauber side project",
   "license": "MIT",
