--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
     "jest": "^29.0.0",
     "nodemon": "^3.1.3"
   },
@@ -42,4 +43,3 @@
   "license": "MIT",
   "keywords": []
 }
-
