--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/preset-react": "^7.24.7",
     "jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3"
   },
   "author": "dauber side project",
