--- a/.env.local
+++ b/.env.local
@@ -7,4 +7,4 @@ VERCEL_TOKEN=dKWP8n2mTlBP12hc8QadVW99
 VERCEL_PROJECT_ID=prj_SvykC7R30HlS827AeUOsKPqAvvDZ
 VERCEL_ORG_ID=team_sixQFOWnnLzR59bcCHudMA0n
 
-MONGODB_URI=mongodb+srv://<vercel-admin-user>:<Thell38>@thell38.7acedro.mongodb.net/?retryWrites=true&w=majority&appName=thell38
+MONGODB_URI=mongodb+srv://vercel-admin-user:Thell38@thell38.7acedro.mongodb.net/?retryWrites=true&w=majority&appName=thell38
