--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.24.7",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^14.0.0", // こちらは適切なバージョンに変更
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3"
@@ -45,3 +46,4 @@
   "license": "MIT",
   "keywords": []
 }
+
