--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "devDependencies": {
     "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^14.0.0", // こちらは適切なバージョンに変更
+    "@testing-library/react": "^14.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3"
