--- a/vercel.json
+++ b/vercel.json
@@ -7,5 +7,11 @@
       "memory": 128,
       "maxDuration": 10
     }
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/socket.io",
+      "destination": "http://localhost:3000/socket.io"
+    }
+  ]
 }
