--- a/vercel.json
+++ b/vercel.json
@@ -9,8 +9,12 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_SUPABASE_URL": "@NEXT_PUBLIC_SUPABASE_URL",
-    "NEXT_PUBLIC_SUPABASE_KEY": "@NEXT_PUBLIC_SUPABASE_KEY"
+    "NEXT_PUBLIC_SUPABASE_URL": "@next_public_supabase_url",
+    "NEXT_PUBLIC_SUPABASE_KEY": "@next_public_supabase_key",
+    "SMTP_HOST": "@smtp_host",
+    "SMTP_PORT": "@smtp_port",
+    "SMTP_USER": "@smtp_user",
+    "SMTP_PASS": "@smtp_pass"
   },
   "builds": [
     {
