--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,6 +19,11 @@ jobs:
       with:
         node-version: '18'
 
+    - name: Clear cache
+      run: |
+        rm -rf ~/.npm
+        rm -rf node_modules
+
     - name: Cache Node modules
       uses: actions/cache@v3
       with:
@@ -26,6 +31,7 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
+
     - name: Install dependencies
       run: npm install
 
