--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
       run: npm install
 
     - name: Build project
-      run: npm run build
+      run: SUPABASE_URL=${{ secrets.SUPABASE_URL }} SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }} npm run build
 
     - name: Deploy to Vercel
       uses: amondnet/vercel-action@v25
