--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.43.4",
