Temporary change to clear Vercel cache

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,15 @@
-{"projectId":"prj_8MrxKotDgQkhsLSAi7WrUiEp0Aoa","orgId":"team_sixQFOWnnLzR59bcCHudMA0n"}
+{
+  "projectId": "prj_8MrxKotDgQkhsLSAi7WrUiEp0Aoa",
+  "orgId": "team_sixQFOWnnLzR59bcCHudMA0n",
+  "settings": {
+    "createdAt": 1718273592258,
+    "framework": "nextjs",
+    "devCommand": null,
+    "installCommand": null,
+    "buildCommand": "npm run build",
+    "outputDirectory": null,
+    "rootDirectory": null,
+    "directoryListing": false,
+    "nodeVersion": "20.x"
+  }
+}
