--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.mjs",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "NEXT_PUBLIC_SUPABASE_URL=$SUPABASE_URL NEXT_PUBLIC_SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY npm run build:local",
+    "build:local": "next build",
+    "start": "NEXT_PUBLIC_SUPABASE_URL=$SUPABASE_URL NEXT_PUBLIC_SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY next start"
   },
-  
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.43.4",
