--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.mjs",
   "scripts": {
     "dev": "next dev",
-    "build": "NEXT_PUBLIC_SUPABASE_URL=$SUPABASE_URL NEXT_PUBLIC_SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY npm run build:local",
+    "build": "SUPABASE_URL=$SUPABASE_URL SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY npm run build:local",
     "build:local": "next build",
-    "start": "NEXT_PUBLIC_SUPABASE_URL=$SUPABASE_URL NEXT_PUBLIC_SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY next start"
+    "start": "SUPABASE_URL=$SUPABASE_URL SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY next start"
   },
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
