--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -45,11 +45,6 @@
       "check": true
     },
     {
-      "src": "^/socket\\.io(?:/((?:[^/]+?)(?:/(?:[^/]+?))*))?(?:/)?$",
-      "dest": "/api/socket/$1",
-      "check": true
-    },
-    {
       "handle": "resource"
     },
     {
@@ -77,7 +72,7 @@
       "handle": "hit"
     },
     {
-      "src": "/_next/static/(?:[^/]+/pages|pages|chunks|runtime|css|image|media|FPgAitQLC_z7Z7KPjgw7P)/.+",
+      "src": "/_next/static/(?:[^/]+/pages|pages|chunks|runtime|css|image|media|l46y2_tjSRlU\\-hjoKpInB)/.+",
       "headers": {
         "cache-control": "public,max-age=31536000,immutable"
       },
