--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - master
 
 jobs:
   deploy:
@@ -21,7 +20,7 @@ jobs:
       run: pnpm install
 
     - name: Build project
-      run: pnpm build
+      run: pnpm run build
 
     - name: Deploy Project to Vercel
-      run: pnpm vercel deploy --archive=tgz --token=${{ secrets.VERCEL_TOKEN }}
+      run: vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
