--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Project description",
   "main": "index.mjs",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "dev": "next dev"
   },
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
-    "@supabase/supabase-js": "^2.43.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.43.5",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
@@ -32,15 +33,18 @@
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.4",
-    "ws": "^8.17.0"
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.24.7",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "typescript": "^5.4.5"
   },
   "author": "dauber side project",
   "license": "MIT",
