--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,16 @@
 {
-  "presets": ["next/babel"]
-}
+    "presets": ["next/babel"],
+    "plugins": [
+      [
+        "module-resolver",
+        {
+          "root": ["."],
+          "alias": {
+            "@components": "./src/components",
+            "@utils": "./src/utils"
+          }
+        }
+      ]
+    ]
+  }
+  
