--- a/package.json
+++ b/package.json
@@ -5,24 +5,45 @@
   "main": "index.mjs",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "dev": "next dev"
+    "build": "next build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next-auth/supabase-adapter": "^0.2.1",
+    "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@shadcn/ui": "^0.0.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.43.5",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.19.2",
-    "next": "^14.2.3",
+    "lucide-react": "^0.453.0",
+    "next": "^14.2.4",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.13",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
@@ -30,9 +51,13 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
+    "react-resizable-panels": "^2.1.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
+    "tailwindcss-animate": "^1.0.7",
     "ws": "^8.17.1"
   },
   "devDependencies": {
@@ -41,6 +66,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3",
