--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "Project description",
   "main": "index.mjs",
-"scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "start": "next start",
-  "lint": "next lint",
-  "test": "jest"
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -58,12 +57,9 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.24.7",
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "babel-plugin-module-resolver": "^5.0.2",
-    "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3",
     "typescript": "^5.4.5"
