--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.7.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
