feat(line-gcal-ai): add lib/* + webhook, JST confirm card, CF AI, KV postback payload

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,11 @@ dauber project.pub
 dauber project
 dauber project.pub
 .vscode
+
+# lock files we don't use
+package-lock.json
+# next/build cache
+.next/
+*.tsbuildinfo
+# env
+.env*
