--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@supabase/supabase-js": "^2.45.6",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "babel-plugin-module-resolver": "^4.1.0",
