--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,3 @@
-
 {
   "root": true,
   "extends": [
@@ -10,14 +9,48 @@
   "plugins": ["@typescript-eslint", "unused-imports", "simple-import-sort"],
   "rules": {
     "react/no-unescaped-entities": "off",
-    "prettier/prettier": "off",
+
+    // Keep Prettier active but non-blocking
+    "prettier/prettier": [
+      "warn",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+
+    // TS rules
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/consistent-type-imports": "off",
+    "@typescript-eslint/consistent-type-imports": [
+      "warn",
+      {
+        "prefer": "type-imports",
+        "disallowTypeAnnotations": false
+      }
+    ],
     "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/ban-ts-comment": "warn",
+    "@typescript-eslint/ban-ts-comment": [
+      "warn",
+      {
+        "ts-expect-error": "allow-with-description"
+      }
+    ],
+
+    // Remove unused imports/vars
     "unused-imports/no-unused-imports": "warn",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_",
+        "ignoreRestSiblings": true
+      }
+    ],
+
+    // Import order
     "simple-import-sort/imports": "warn",
     "simple-import-sort/exports": "warn",
+
+    // Allow console.warn/error but flag others
     "no-console": ["warn", { "allow": ["warn", "error"] }]
   }
 }
