--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_35JzMu8la5gPHSEb05zkPbzcHtRT","orgId":"team_sixQFOWnnLzR59bcCHudMA0n"}
+{"projectId":"prj_35JzMu8la5gPHSEb05zkPbzcHtRT","orgId":"team_sixQFOWnnLzR59bcCHudMA0n","projectName":"dauberside-github-io-1"}
