--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "fix": "eslint . --fix && prettier --write --single-quote --end-of-line auto ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next-auth/supabase-adapter": "^0.2.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -26,14 +26,11 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/supabase-js": "^2.45.6",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@vercel/kv": "^3.0.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
-    "babel-plugin-module-resolver": "^4.1.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
@@ -44,7 +41,6 @@
     "googleapis": "^156.0.0",
     "lucide-react": "^0.453.0",
     "next": "^14.2.4",
-    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.15",
     "postcss": "^8.4.38",
     "querystring": "^0.2.1",
@@ -84,20 +80,6 @@
   "author": "dauber side project",
   "license": "MIT",
   "keywords": [],
-  "eslintConfig": {
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": "error"
-    }
-  },
   "engines": {
     "node": "22.x"
   }
