--- a/package.json
+++ b/package.json
@@ -75,8 +75,10 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.30",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jest-dom": "^5.5.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-testing-library": "^7.6.8",
     "eslint-plugin-unused-imports": "^4.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
