--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,3 +56,9 @@ jobs:
       - name: Validate spec structure
         run: |
           ./spec/scripts/validate-spec.sh
+      - name: OpenAPI lint (optional)
+        run: |
+          npx -y @redocly/openapi-cli@latest lint spec/specs/003-my-feature/contracts/booking.openapi.yml || true
+      - name: Generate API types (optional)
+        run: |
+          npx -y openapi-typescript@latest spec/specs/003-my-feature/contracts/booking.openapi.yml --output src/types/generated/booking-api.ts || true
