chore(lib): add categorized barrels and docs; namespace exports to avoid collisions; keep tests/build green

--- a/.eslintrc
+++ b/.eslintrc
@@ -58,7 +58,8 @@
       "files": ["**/__tests__/**/*.{ts,tsx,js,jsx}", "jest.setup.js"],
       "env": { "jest": true },
       "rules": {
-        "@typescript-eslint/no-require-imports": "off"
+        "@typescript-eslint/no-require-imports": "off",
+        "@typescript-eslint/no-namespace": "off"
       }
     },
     {
