--- a/package.json
+++ b/package.json
@@ -63,7 +63,11 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.27.1",
+    "@redocly/openapi-cli": "1.0.0-beta.95",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -87,9 +91,8 @@
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^3.1.3",
-    "prettier": "^3.3.1",
-    "@redocly/openapi-cli": "1.0.0-beta.95",
     "openapi-typescript": "^7.4.2",
+    "prettier": "^3.3.1",
     "ts-jest": "^29.4.0",
     "typescript": "5.8.3"
   },
