chore: add AgentBuilder pipelines, preview smoke workflow

--- a/package.json
+++ b/package.json
@@ -4,9 +4,21 @@
   "description": "Project description",
   "main": "index.mjs",
   "scripts": {
+    "prebuild": "pnpm -s agent:builder:validate && pnpm -s agent:builder:generate",
     "dev": "next dev",
+    "agent:dev": "next dev",
+    "agent:dev:3030": "next dev -p 3030",
     "build": "next build",
+    "agent:build": "next build",
     "start": "next start",
+    "agent:start": "next start",
+    "agent:start:3030": "next start -p 3030",
+    "agent:builder:init": "node ./scripts/agent-builder/init.mjs",
+    "agent:builder:validate": "node ./scripts/agent-builder/validate.mjs",
+    "agent:builder:generate": "node ./scripts/agent-builder/generate.mjs",
+  "agent:builder:all": "pnpm -s agent:builder:validate && pnpm -s agent:builder:generate && pnpm -s build",
+  "agent:builder:all:dev": "node ./scripts/agent-builder/all-dev.mjs",
+  "agent:builder:smoke": "node ./scripts/agent-builder/smoke.mjs",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:next": "next lint",
     "typecheck": "tsc --noEmit",
@@ -27,6 +39,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@openai/agents": "^0.1.11",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -60,7 +73,8 @@
     "react-resizable-panels": "^2.1.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.40"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
