--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.mjs",
   "scripts": {
     "prebuild": "pnpm -s agent:builder:validate && pnpm -s agent:builder:generate",
-    "dev": "next dev",
-    "agent:dev": "next dev",
+  "postbuild": "node ./scripts/postbuild.mjs",
+  "dev": "next dev -p 3030",
+  "agent:dev": "next dev -p 3030",
     "agent:dev:3030": "next dev -p 3030",
     "build": "next build",
     "agent:build": "next build",
-    "start": "next start",
-    "agent:start": "next start",
+  "start": "next start -p 3030",
+  "agent:start": "next start -p 3030",
     "agent:start:3030": "next start -p 3030",
     "agent:builder:init": "node ./scripts/agent-builder/init.mjs",
     "agent:builder:validate": "node ./scripts/agent-builder/validate.mjs",
@@ -19,6 +20,11 @@
   "agent:builder:all": "pnpm -s agent:builder:validate && pnpm -s agent:builder:generate && pnpm -s build",
   "agent:builder:all:dev": "node ./scripts/agent-builder/all-dev.mjs",
   "agent:builder:smoke": "node ./scripts/agent-builder/smoke.mjs",
+    "kb:build": "node ./scripts/kb/build.mjs",
+  "kb:smoke:api": "node ./scripts/kb/smoke-kb-api.mjs",
+  "kb:smoke:next": "node ./scripts/kb/smoke-next-kb-proxy.mjs",
+  "kb:smoke:next:toggle": "node ./scripts/kb/smoke-next-kb-proxy.mjs --toggle",
+  "ops:smoke:metrics": "node ./scripts/ops/smoke-metrics.mjs",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:next": "next lint",
     "typecheck": "tsc --noEmit",
@@ -29,10 +35,16 @@
     "format:check": "prettier --check .",
     "fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix && prettier --write .",
     "ci": "pnpm lint && pnpm typecheck && pnpm test && pnpm build",
-    "spec:validate": "bash ./spec/scripts/validate-spec.sh",
-    "spec:openapi:lint": "openapi lint spec/specs/003-my-feature/contracts/booking.openapi.yml",
-    "spec:openapi:types": "openapi-typescript spec/specs/003-my-feature/contracts/booking.openapi.yml --output src/types/generated/booking-api.ts",
-    "test:contract": "jest --config jest.config.js src/__tests__/contract --runInBand"
+    
+    "test:contract": "jest --config jest.config.js src/__tests__/contract --runInBand",
+    "ops:allowlist:list": "node ./scripts/ops/allowlist.mjs list",
+    "ops:allowlist:add": "node ./scripts/ops/allowlist.mjs add",
+    "ops:allowlist:remove": "node ./scripts/ops/allowlist.mjs remove",
+    "ops:basic:list": "node ./scripts/ops/admin-basic.mjs list",
+    "ops:basic:add": "node ./scripts/ops/admin-basic.mjs add",
+    "ops:basic:remove": "node ./scripts/ops/admin-basic.mjs remove",
+    "ops:basic:set-single": "node ./scripts/ops/admin-basic.mjs set-single",
+    "ops:smoke:tailscale": "node ./scripts/ops/tailscale/smoke-api.mjs"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
