--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
     "src/**/__tests__/**",
     "src/**/*.test.ts",
     "src/**/*.test.tsx",
-    "src/**/__mocks__/**"
+    "src/**/__mocks__/**",
+    "src/pages/chat.tsx"
   ]
 }
